tests/NormalTests/paczka1/fuzzy1/20730234.err
Error in line 1: 1qI A229 44,3
Error in line 10: QZPPgah A178 55,2
Error in line 25: S149 A229 89,1
Error in line 20: vWwVLxK A178 50,4
Error in line 26: S149 A178 61,9
Error in line 24: PMekD2p2aGu A229 94,7
Error in line 27: 1qI S149 6,3
